--- a/view/TeilebestandPanel.form
+++ b/view/TeilebestandPanel.form
@@ -27,19 +27,14 @@
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" attributes="0">
-                              <Component id="lblFreitextsuche" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                              <Component id="txfFreitextsuche" min="-2" pref="196" max="-2" attributes="0"/>
-                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                              <Component id="btnSuchen" min="-2" pref="118" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" pref="291" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="695" max="-2" attributes="0"/>
                               <Component id="btnFiltern" min="-2" max="-2" attributes="0"/>
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Component id="btnFilterZurücksetzen" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Component id="lblTeilebestand" min="-2" pref="151" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace max="32767" attributes="0"/>
+                      <EmptySpace pref="100" max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
                       <Group type="103" groupAlignment="1" attributes="0">
@@ -69,9 +64,6 @@
               <Component id="lblTeilebestand" min="-2" pref="25" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="btnSuchen" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="txfFreitextsuche" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="lblFreitextsuche" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="btnFilterZurücksetzen" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                   <Component id="btnFiltern" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
@@ -134,14 +126,6 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnNeuesTeilActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="btnSuchen">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="suchen"/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSuchenActionPerformed"/>
-      </Events>
-    </Component>
     <Component class="javax.swing.JButton" name="btnTeilAendern">
       <Properties>
         <Property name="text" type="java.lang.String" value="Teil bearbeiten"/>
@@ -149,13 +133,6 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnTeilAendernActionPerformed"/>
       </Events>
-    </Component>
-    <Component class="javax.swing.JTextField" name="txfFreitextsuche">
-    </Component>
-    <Component class="javax.swing.JLabel" name="lblFreitextsuche">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Freitextsuche:"/>
-      </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="lblAktionSelektiert">
       <Properties>
