--- a/view/WarenbewegungPanel.form
+++ b/view/WarenbewegungPanel.form
@@ -60,18 +60,13 @@
                   <Group type="103" groupAlignment="1" max="-2" attributes="0">
                       <Component id="scpMain" alignment="0" max="32767" attributes="0"/>
                       <Group type="102" alignment="0" attributes="0">
-                          <Component id="lblFreitextsuche" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Component id="txfFreitextsuche" min="-2" pref="196" max="-2" attributes="0"/>
-                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Component id="btnSuchen" min="-2" pref="118" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="291" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="695" max="-2" attributes="0"/>
                           <Component id="btnFilter" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Component id="btnFilterzurücksetzen" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace pref="20" max="32767" attributes="0"/>
+                  <EmptySpace pref="129" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -80,9 +75,6 @@
               <Group type="102" attributes="0">
                   <EmptySpace min="-2" pref="0" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="btnSuchen" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="txfFreitextsuche" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="lblFreitextsuche" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="btnFilterzurücksetzen" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                       <Component id="btnFilter" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
@@ -110,7 +102,7 @@
                   <TableColumnModel selectionModel="0"/>
                 </Property>
                 <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                  <Color id="Default Cursor"/>
+                  <Color id="Standardcursor"/>
                 </Property>
                 <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
                   <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
@@ -122,21 +114,6 @@
             </Component>
           </SubComponents>
         </Container>
-        <Component class="javax.swing.JButton" name="btnSuchen">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="suchen"/>
-          </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSuchenActionPerformed"/>
-          </Events>
-        </Component>
-        <Component class="javax.swing.JTextField" name="txfFreitextsuche">
-        </Component>
-        <Component class="javax.swing.JLabel" name="lblFreitextsuche">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Freitextsuche:"/>
-          </Properties>
-        </Component>
         <Component class="javax.swing.JButton" name="btnFilterzur&#xfc;cksetzen">
           <Properties>
             <Property name="text" type="java.lang.String" value="Filter zur&#xfc;cksetzen"/>
