--- a/view/WarenbewegungFilterFrame.form
+++ b/view/WarenbewegungFilterFrame.form
@@ -184,7 +184,7 @@
         <Component class="javax.swing.JComboBox" name="cbxQuelleLagertyp">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="new javax.swing.DefaultComboBoxModel(new String[] {&quot;&quot;, &quot;FL&quot;, &quot;RL&quot; })" type="code"/>
+              <Connection code="new javax.swing.DefaultComboBoxModel(new String[] {&quot;&quot;, &quot;FL&quot;, &quot;HL&quot; })" type="code"/>
             </Property>
           </Properties>
         </Component>
@@ -249,7 +249,7 @@
         <Component class="javax.swing.JComboBox" name="cbxZielLagertyp">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="new javax.swing.DefaultComboBoxModel(new String[] { &quot;&quot;, &quot;FL&quot;, &quot;RL&quot; })" type="code"/>
+              <Connection code="new javax.swing.DefaultComboBoxModel(new String[] { &quot;&quot;, &quot;FL&quot;, &quot;HL&quot; })" type="code"/>
             </Property>
           </Properties>
         </Component>
