--- a/view/WarenbewegungFilterFrame.form
+++ b/view/WarenbewegungFilterFrame.form
@@ -81,10 +81,10 @@
                                               <Component id="lblDatumVon" alignment="0" min="-2" max="-2" attributes="0"/>
                                               <Component id="lblDatumBis" alignment="0" min="-2" max="-2" attributes="0"/>
                                           </Group>
-                                          <EmptySpace max="32767" attributes="0"/>
+                                          <EmptySpace type="separate" max="32767" attributes="0"/>
                                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                              <Component id="txfDatumBis" pref="70" max="32767" attributes="0"/>
-                                              <Component id="txfDatumVon" max="32767" attributes="0"/>
+                                              <Component id="txfDatumVon" pref="80" max="32767" attributes="0"/>
+                                              <Component id="txfDatumBis" max="32767" attributes="0"/>
                                           </Group>
                                       </Group>
                                       <Component id="lblBewegungsDatum" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -94,10 +94,10 @@
                                               <Component id="lblhaltbarVon" alignment="0" min="-2" max="-2" attributes="0"/>
                                               <Component id="lblHaltbarBis" alignment="0" min="-2" max="-2" attributes="0"/>
                                           </Group>
-                                          <EmptySpace max="32767" attributes="0"/>
+                                          <EmptySpace type="separate" max="32767" attributes="0"/>
                                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                              <Component id="txfHaltbarVon" max="32767" attributes="0"/>
-                                              <Component id="txfHaltbarBis" pref="70" max="32767" attributes="0"/>
+                                              <Component id="txfHaltbarVon" pref="80" max="32767" attributes="0"/>
+                                              <Component id="txfHaltbarBis" max="32767" attributes="0"/>
                                           </Group>
                                       </Group>
                                   </Group>
